k8/deployments/lockmancyber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lockmancyber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lockmancyber
  template:
    metadata:
      labels:
        app: lockmancyber
    spec:
      containers:
        - name: lockmancyber
          image: travislockman/lockmancyber:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: lockmancyber
spec:
  type: NodePort
  selector:
    app: lockmancyber
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
