k8/deployments/nano kube-state-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-nodeport
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: kube-state-metrics
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 31080  # Change this if you need a different port
