k8/deployments/resnet-classify.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resnet-classify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resnet-classify
  template:
    metadata:
      labels:
        app: resnet-classify
    spec:
      containers:
        - name: resnet-classify
          image: travislockman/resnet-classify:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: resnet-classify-service
spec:
  selector:
    app: resnet-classify
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
