k8/deployments/lockman-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lockman-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: www.lockmancyber.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: resnet-foolbox-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lockmancyber
                port:
                  number: 80
    - host: lockmancyber.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lockmancyber
                port:
                  number: 80
